<resources>
    <string name="app_name">小智课程帮</string>

    <!--登录页面字符串-->
    <string name="sign_in_view">登陆</string>
    <string name="account">学号/工号</string>
    <string name="password">密码</string>
    <string name="tips">没有账号？点击注册</string>

    <string name="menu_main_name">用户中心</string>

    <!--注册页面字符串-->
    <string name="sign_up_view">注册</string>
    <string name="student_sign_up">学生注册</string>
    <string name="teacher_sign_up">教职工注册</string>
    <string name="dialog_select_identity_tip">请选择您的身份</string>
    <array name="identity">
        <item>教职工</item>
        <item>学生</item>
    </array>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="student_number">学号</string>
    <string name="work_number">工号</string>
    <string name="class_name">班级</string>
    <string name="tel">联系电话</string>
    <string name="password_again">再次输入密码</string>


</resources>
