<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_teacher_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="magic.com.intelligentattendingsystem.Activity.ActivityTeacherSignUp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView"
        android:layout_marginStart="16dp"
        android:layout_toStartOf="@+id/btn_sign_up_confirm"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_above="@+id/textView6" />

    <EditText
        android:layout_marginEnd="16dp"
        android:id="@+id/et_sign_up_teacher_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/et_sign_up_teacher_name"
        android:layout_below="@+id/et_sign_up_teacher_name"
        android:layout_marginTop="12dp"
        android:text="@string/gender" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="56dp"
        android:text="@string/password" />

    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/rg_tea_choose_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4">

        <RadioButton
            android:id="@+id/rbtn_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rbtn_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/female" />

    </RadioGroup>

    <EditText
        android:id="@+id/et_sign_up_teacher_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/textView9"
        android:ems="10"
        android:layout_marginEnd="16dp" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/et_sign_up_teacher_work_number"
        android:layout_below="@+id/et_sign_up_teacher_work_number"
        android:layout_marginTop="15dp"
        android:text="@string/tel" />

    <EditText
        android:id="@+id/et_sign_up_teacher_work_number"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/et_sign_up_teacher_password"
        android:layout_below="@+id/et_sign_up_teacher_password"
        android:text="@string/password_again" />

    <Button
        android:id="@+id/btn_sign_up_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_sign_up_teacher_password_again"
        android:layout_centerHorizontal="true"
        android:text="注册" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/name"
        android:layout_below="@+id/toolbar2"
        android:layout_alignStart="@+id/et_sign_up_teacher_name" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_number"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/rg_tea_choose_gender"
        android:layout_alignStart="@+id/imageView2" />

    <Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:title="@string/teacher_sign_up"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_sign_up_teacher_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <EditText
        android:id="@+id/et_sign_up_teacher_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />


</RelativeLayout>
