<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_student_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="magic.com.intelligentattendingsystem.Activity.ActivityStudentSignUp">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:title="@string/student_sign_up"/>

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginStart="15dp"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp"
        android:layout_alignTop="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/et_sign_up_student_name"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:text="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/et_sign_up_student_name"
        android:layout_alignStart="@+id/et_sign_up_student_name" />

    <ImageView
        android:layout_marginStart="16dp"
        android:layout_width="93dp"
        android:layout_height="110dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageView2"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/toolbar" />

    <EditText
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/et_sign_up_student_number"
        android:layout_below="@+id/textView20"
        android:layout_alignStart="@+id/textView20" />

    <TextView
        android:text="@string/tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_below="@+id/et_sign_up_student_number"
        android:layout_alignStart="@+id/et_sign_up_student_number" />

    <TextView
        android:text="班级"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_below="@+id/rg_stu_choose_gender"
        android:layout_alignStart="@+id/imageView2" />

    <TextView
        android:text="学号"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView20"
        android:layout_below="@+id/et_sign_up_student_class_number"
        android:layout_alignStart="@+id/et_sign_up_student_class_number" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_sign_up_student_telephone"
        android:layout_alignStart="@+id/et_sign_up_student_telephone"
        android:id="@+id/textView21" />

    <EditText
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/et_sign_up_student_password"
        android:layout_below="@+id/textView21"
        android:layout_alignStart="@+id/textView21" />

    <TextView
        android:text="@string/password_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_below="@+id/et_sign_up_student_password"
        android:layout_alignStart="@+id/et_sign_up_student_password" />

    <EditText
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/et_sign_up_student_password_again"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <Button
        android:text="注册"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_student_confirm_signup"
        android:layout_below="@+id/et_sign_up_student_password_again"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/rg_stu_choose_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4">

        <RadioButton
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton" />

        <RadioButton
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:layout_marginStart="14dp" />

    </RadioGroup>

    <EditText
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/et_sign_up_student_telephone"
        android:layout_below="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/textView7" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/et_sign_up_student_class_number"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />


</RelativeLayout>
