<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="magic.com.intelligentattendingsystem.Activity.ActivitySignIn">

    <Toolbar
        android:id="@+id/toolbar_main_activity"
        android:theme="?attr/actionBarTheme"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:title="@string/sign_in_view" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/toolbar_main_activity"
        android:layout_marginTop="37dp"
        android:text="@string/account"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_signin_account"
        android:layout_marginStart="27dp"
        android:layout_marginTop="25dp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/tv_signin_jump2sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_signin_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/tips"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_view"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="183dp" />

    <EditText
        android:id="@+id/et_signin_account"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        android:id="@+id/et_signin_password"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />


</RelativeLayout>
