<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_stuent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="magic.com.intelligentattendingsystem.Activity.ActivityStudentUserCenter">

    <android.support.v7.widget.Toolbar
        app:title="学生用户信息"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/toolbar4" />

    <TextView
        android:text="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/textView4"
        android:layout_below="@+id/et_sign_up_teacher_name"
        android:layout_alignStart="@+id/et_sign_up_teacher_name" />

    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/stu_sign_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4">


        <RadioButton
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton" />

        <RadioButton
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:layout_marginStart="14dp" />

    </RadioGroup>


    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <TextView
        android:text="@string/password_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/textView9" />


    <EditText
        android:text="123456"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_sign_up_teacher_password_again"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <ImageView
        android:paddingRight="28dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginStart="35dp"
        android:id="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/textView4"
        android:layout_alignBottom="@+id/et_sign_up_teacher_work_number"
        android:layout_alignTop="@+id/textView" />

    <EditText
        android:text="123456"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_sign_up_teacher_password"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/textView9" />

    <EditText
        android:text="啦啦啦"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_sign_up_teacher_name"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="班级"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/textView6"
        android:layout_below="@+id/stu_sign_radio_group"
        android:layout_toEndOf="@+id/imageView2" />

    <EditText
        android:text="10086"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_sign_up_teacher_telephone"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2"
        android:id="@+id/textView19" />

    <TextView
        android:text="@string/tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_below="@+id/editText6"
        android:layout_alignEnd="@+id/textView19" />

    <EditText
        android:text="物联网13-1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_sign_up_teacher_work_number"
        android:layout_below="@+id/textView6"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_below="@+id/textView19"
        android:layout_alignStart="@+id/textView7" />

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/textView"
        android:layout_below="@+id/toolbar4"
        android:layout_toEndOf="@+id/imageView2" />

    <Button
        android:text="保存信息修改"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_student_confirm_signup"
        android:layout_marginBottom="11dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
